config/system-namespace.yml
#@ load("@ytt:data", "data")

---
apiVersion: v1
kind: Namespace
metadata:
  name: #@ data.values.system_namespace
  labels:
    istio-injection: enabled
